@@ -2,6 +2,8 @@
 Changes between 1.3.4 and 1.4.0.dev0
 ==================================================
 
+- fix issue124 - make reporting more resilient against tests opening
+  files on filedescriptor 1 (stdout).
 - fix issue109 - sibling conftest.py files will not be loaded.
   (and Directory collectors cannot be customized anymore from a Directory's
   conftest.py - this needs to happen at least one level up).
